--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "Quasar/vendor/glfw"]
-	path = Quasar/vendor/glfw
+[submodule "Quest/vendor/glfw"]
+	path = Quest/vendor/glfw
 	url = https://github.com/alexsederquest98/glfw.git
-[submodule "Quasar/vendor/spdlog"]
-	path = Quasar/vendor/spdlog
-	url = https://github.com/gabime/spdlog.git
-[submodule "Quasar/vendor/imgui"]
-	path = Quasar/vendor/imgui
-	url = https://github.com/ocornut/imgui.git
-[submodule "Quasar/vendor/glm"]
-	path = Quasar/vendor/glm
+[submodule "Quest/vendor/glm"]
+	path = Quest/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Quest/vendor/spdlog"]
+	path = Quest/vendor/spdlog
+	url = https://github.com/gabime/spdlog.git
+[submodule "Quest/vendor/imgui"]
+	path = Quest/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
