--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "Quest/vendor/spdlog"]
 	path = Quest/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Quest/vendor/imgui"]
+	path = Quest/vendor/imgui
+	url = https://github.com/alexsederquest98/imgui.git
