--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=677,138
-Size=550,680
+Pos=1364,71
+Size=527,680
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][Dear ImGui Debug Log]
+Pos=700,138
+Size=527,680
+Collapsed=0
+DockId=0x00000001,1
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=1533,280 Size=527,680 Selected=0xE87781F4
 
