Created OrthographicCamera and moved all the testing code from Application into the Sandbox project

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1873,534
-ViewportId=0xE927CF2F
-Size=527,680
+Pos=1373,211
+Size=527,583
 Collapsed=0
 DockId=0x00000001,0
 
@@ -16,6 +15,12 @@ Size=527,680
 Collapsed=0
 DockId=0x00000001,1
 
+[Window][Testing Sandbox]
+ViewportPos=1927,216
+ViewportId=0x6AC2CCF3
+Size=324,216
+Collapsed=0
+
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=1873,534 Size=527,680 Selected=0xE87781F4
+DockNode  ID=0x00000001 Pos=1772,358 Size=527,583 Selected=0xE87781F4
 
