--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -26,6 +26,11 @@ Pos=60,61
 Size=363,129
 Collapsed=0
 
+[Window][Square Color Settings]
+Pos=60,60
+Size=425,151
+Collapsed=0
+
 [Docking][Data]
 DockNode  ID=0x00000001 Pos=1772,358 Size=527,583 Selected=0xE87781F4
 
