Added Renderer2D statistics and draw call splitting for the batch renderer

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -31,6 +31,16 @@ Pos=61,58
 Size=425,151
 Collapsed=1
 
+[Window][Settings]
+Pos=56,28
+Size=135,116
+Collapsed=0
+
+[Window][Statistics]
+Pos=60,60
+Size=135,116
+Collapsed=0
+
 [Docking][Data]
 DockNode  ID=0x00000001 Pos=1772,358 Size=527,583 Selected=0xE87781F4
 
